[package]
name = "quoin"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
toml = "0.8"
anyhow = "1.0"
which = "4.4"
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
tower-http = { version = "0.5", features = ["fs", "cors"] }
rust-embed = { version = "8.0", features = ["interpolate-folder-path"] }
tempfile = "3.8"
mime_guess = "2.0"
